# Pick-And-Place-Project-CPR

./: README.md  package.xml
launch/: simulation.launch
objects/smolBox/: model.config  model.sdf
src/: fsm.py  move_robot.py
